--- a/client/package.json
+++ b/client/package.json
@@ -10,6 +10,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@supabase/supabase-js": "^2.45.4",
     "@zegocloud/zego-uikit-prebuilt": "^2.10.0",
     "axios": "^1.7.2",
     "framer-motion": "^11.3.2",
