--- a/client/package.json
+++ b/client/package.json
@@ -10,8 +10,8 @@
     "preview": "vite preview"
   },
   "dependencies": {
-    "@supabase/supabase-js": "^2.45.4",
     "@react-three/fiber": "^8.17.9",
+    "@supabase/supabase-js": "^2.45.4",
     "@tabler/icons-react": "^3.19.0",
     "@tsparticles/engine": "^3.5.0",
     "@tsparticles/react": "^3.0.0",
@@ -23,6 +23,7 @@
     "jwt-decode": "^4.0.0",
     "lodash": "^4.17.21",
     "mini-svg-data-uri": "^1.4.4",
+    "quill": "^2.0.2",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-icons": "^5.2.1",
