--- a/client/package.json
+++ b/client/package.json
@@ -18,6 +18,7 @@
     "@tsparticles/slim": "^3.5.0",
     "@zegocloud/zego-uikit-prebuilt": "^2.10.0",
     "axios": "^1.7.2",
+    "chart.js": "^4.4.4",
     "clsx": "^2.1.1",
     "framer-motion": "^11.11.1",
     "jwt-decode": "^4.0.0",
@@ -25,10 +26,12 @@
     "mini-svg-data-uri": "^1.4.4",
     "quill": "^2.0.2",
     "react": "^18.3.1",
+    "react-chartjs-2": "^5.2.0",
     "react-dom": "^18.3.1",
     "react-icons": "^5.2.1",
     "react-router-dom": "^6.26.2",
     "react-tilt": "^1.0.2",
+    "socket.io-client": "^4.8.0",
     "tailwind-merge": "^2.5.3",
     "three": "^0.169.0",
     "uuid": "^10.0.0"
