--- a/client/package.json
+++ b/client/package.json
@@ -10,6 +10,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@material-tailwind/react": "^2.1.10",
     "@react-three/fiber": "^8.17.9",
     "@supabase/supabase-js": "^2.45.4",
     "@tabler/icons-react": "^3.19.0",
@@ -29,6 +30,7 @@
     "react-icons": "^5.2.1",
     "react-router-dom": "^6.26.2",
     "react-tilt": "^1.0.2",
+    "socket.io-client": "^4.8.0",
     "tailwind-merge": "^2.5.3",
     "three": "^0.169.0",
     "uuid": "^10.0.0"
